--- a/CustomSpringSecurity/build.gradle
+++ b/CustomSpringSecurity/build.gradle
@@ -19,8 +19,12 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	
 	
-    /* database */
-	compile('commons-dbcp:commons-dbcp:1.4')
+     /* Commons-DBCP 2.x */
+	compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
+	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.4.2'
+	
+	/* MySQL , MyBatis */
 	compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
 	compile("org.springframework.boot:spring-boot-starter-jdbc:2.0.1.RELEASE")
 	compile("org.mybatis:mybatis-spring:1.3.1")
